--- a/resume.html
+++ b/resume.html
@@ -584,6 +584,16 @@
               <span>
                 <svg class="icon" viewBox="0 0 24 24">
                   <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                  />
+                </svg>
+                <a href="https://codeberg.org/JvandeLocht" target="_blank"
+                  >codeberg.org/JvandeLocht</a
+                >
+              </span>
+              <span>
+                <svg class="icon" viewBox="0 0 24 24">
+                  <path
                     d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                   />
                 </svg>
@@ -646,7 +656,7 @@
                 </div>
                 <div class="timeline-item">
                   <div class="timeline-date">Februar 2013 - Dezember 2020</div>
-                  <div class="timeline-title">Industriemechaniker</div>
+                  <div class="timeline-title">Industriemechaniker Fachrichtung Maschinen- und Anlagenbau</div>
                   <div class="timeline-company">MAN Energy Solutions SE</div>
                 </div>
               </div>
@@ -657,13 +667,13 @@
               <h2>Ausbildung</h2>
               <div class="timeline">
                 <div class="timeline-item">
-                  <div class="timeline-date">Seit Januar 2020</div>
+                  <div class="timeline-date">Januar 2020 - Oktober 2024</div>
                   <div class="timeline-title">Bachelor of Engineering</div>
-                  <div class="timeline-company">Hamburger Fern-Hochschule</div>
+                  <div class="timeline-company">Schwerpunkt: Smart Products & Services<br>Hamburger Fern-Hochschule</div>
                 </div>
                 <div class="timeline-item">
                   <div class="timeline-date">September 2009 - Februar 2013</div>
-                  <div class="timeline-title">Ausbildung Industriemechaniker</div>
+                  <div class="timeline-title">Ausbildung zum Industriemechaniker in der Fachrichtung Maschinen- und Anlagenbau</div>
                   <div class="timeline-company">MAN Energy Solutions SE</div>
                 </div>
               </div>
@@ -678,17 +688,18 @@
               <div class="timeline">
                 <div class="timeline-item">
                   <div class="timeline-date">2023</div>
-                  <div class="timeline-title">Harvard CS50 - AI with Python</div>
+                  <div class="timeline-title">Gastvorlesung Harvard</div>
+                  <div class="timeline-company">CS50<br>Artificial Intelligence with Python</div>
                 </div>
                 <div class="timeline-item">
                   <div class="timeline-date">2022</div>
-                  <div class="timeline-title">Universität Wien</div>
-                  <div class="timeline-company">Physik & Tensorrechnung</div>
+                  <div class="timeline-title">Gastvorlesung Universität Wien</div>
+                  <div class="timeline-company">Einführung in die Vektor- und Tensorrechnung 1<br>Einführung in die Physik 1<br>Einführung in die Physik 2</div>
                 </div>
                 <div class="timeline-item">
                   <div class="timeline-date">August 2015 - Juni 2019</div>
-                  <div class="timeline-title">Staatlich geprüfter Techniker</div>
-                  <div class="timeline-company">TBS 1, Bochum</div>
+                  <div class="timeline-title">Staatlich geprüfter Techniker in der Fachrichtung Maschinenbautechnik</div>
+                  <div class="timeline-company">Technische Berufliche Schule 1, Bochum</div>
                 </div>
               </div>
             </section>
@@ -701,17 +712,19 @@
                   <h3>EDV-Kenntnisse</h3>
                   <div>
                     <span class="skill-item">Siemens NX</span>
-                    <span class="skill-item">ANSYS</span>
-                    <span class="skill-item">SAP</span>
                     <span class="skill-item">ECTR</span>
+                    <span class="skill-item">SAP</span>
+                    <span class="skill-item">ANSYS</span>
+                    <span class="skill-item">GIT</span>
                   </div>
                 </div>
                 <div class="skill-category">
                   <h3>Programmierung</h3>
                   <div>
                     <span class="skill-item">Python</span>
-                    <span class="skill-item">VBA</span>
                     <span class="skill-item">Nix</span>
+                    <span class="skill-item">Bash</span>
+                    <span class="skill-item">C</span>
                   </div>
                 </div>
                 <div class="skill-category">
